// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-stories no-name.mdx 1`] = `
Object {
  "components": Object {
    "2855216c2faa4ab43ed978e3ff6743e4": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "imports": undefined,
      "loc": undefined,
      "name": "Button",
      "request": undefined,
      "source": undefined,
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "2855216c2faa4ab43ed978e3ff6743e4",
    },
    "date": 2020-03-07T05:21:15.061Z,
    "dateModified": 2020-05-18T16:38:12.799Z,
    "package": "8c5cf9d9fa1d5bc7742765b451f2a255",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "8c5cf9d9fa1d5bc7742765b451f2a255": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "8c5cf9d9fa1d5bc7742765b451f2a255",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/no-name.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {},
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story>
  <Button />
</Story>
",
}
`;

exports[`mdx-stories props-argument.mdx 1`] = `
Object {
  "components": Object {
    "adb0a7ff2c278d595f4ce67bb4b42887": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "imports": undefined,
      "loc": undefined,
      "name": "Button",
      "request": undefined,
      "source": undefined,
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "adb0a7ff2c278d595f4ce67bb4b42887",
    },
    "date": 2020-03-07T05:21:58.603Z,
    "dateModified": 2020-05-18T16:38:18.357Z,
    "package": "5025d10bd14c417a3985dd520bbc8ce0",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "5025d10bd14c417a3985dd520bbc8ce0": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "5025d10bd14c417a3985dd520bbc8ce0",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/props-argument.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 57,
          "line": 28,
        },
        "start": Object {
          "column": 38,
          "line": 28,
        },
      },
      "name": "story-with-props",
      "source": "props => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {props => <Button />}
</Story>

",
}
`;

exports[`mdx-stories story.mdx 1`] = `
Object {
  "components": Object {
    "ceea0565a65f75c8c7b6b355d6d335ac": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "loc": Object {
        "end": Object {
          "column": 65,
          "line": 3,
        },
        "start": Object {
          "column": 15,
          "line": 3,
        },
      },
      "name": "Button",
      "package": "305b7edffa5cab1bfaf0c86ebde067bd",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
      "source": "import React from 'react';

const Button = props => <button>{\`Hello, \${props.name}\`}</button>;

export default Button;
",
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "ceea0565a65f75c8c7b6b355d6d335ac",
    },
    "date": 2020-03-07T04:45:17.122Z,
    "dateModified": 2020-05-18T16:38:24.229Z,
    "package": "9d6345a2d09c05cff0ad7c86fe40c4f9",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "305b7edffa5cab1bfaf0c86ebde067bd": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "305b7edffa5cab1bfaf0c86ebde067bd",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
    "9d6345a2d09c05cff0ad7c86fe40c4f9": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "9d6345a2d09c05cff0ad7c86fe40c4f9",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/story.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "smartStory": Object {
      "id": "smartStory",
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 30,
        },
        "start": Object {
          "column": 32,
          "line": 28,
        },
      },
      "name": "smart story",
      "source": "<Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../../components/button-default-arrow-func';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"smart story\\">
  <Button />
</Story>

",
}
`;

exports[`mdx-stories three-levels-alias.mdx 1`] = `
Object {
  "components": Object {
    "c63d685efb0c65f18ffc63184e852ef4": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "imports": undefined,
      "loc": undefined,
      "name": "Button",
      "request": undefined,
      "source": undefined,
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "c63d685efb0c65f18ffc63184e852ef4",
    },
    "date": 2020-03-07T05:26:10.375Z,
    "dateModified": 2020-05-18T16:38:30.328Z,
    "package": "c151e21eacb60e5b077423daed2d02e2",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "c151e21eacb60e5b077423daed2d02e2": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "c151e21eacb60e5b077423daed2d02e2",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/three-levels-alias.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 4,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 31,
                  "line": 1,
                },
                "start": Object {
                  "column": 16,
                  "line": 1,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 23,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 1,
                    },
                  },
                  "name": "first",
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 29,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": "last",
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 13,
                  "line": 3,
                },
                "start": Object {
                  "column": 10,
                  "line": 3,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 33,
        },
        "start": Object {
          "column": 9,
          "line": 29,
        },
      },
      "name": "story-with-props",
      "source": "({
          name: { first, last },

          age,
        }) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {({ name: { first, last }, age }) => <Button />}
</Story>

",
}
`;

exports[`mdx-stories tw0-levels-sub-arguments.mdx 1`] = `
Object {
  "components": Object {
    "88c2f5883a4daf6051d3f8a38ce7bf75": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "imports": undefined,
      "loc": undefined,
      "name": "Button",
      "request": undefined,
      "source": undefined,
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "88c2f5883a4daf6051d3f8a38ce7bf75",
    },
    "date": 2020-03-07T05:24:18.801Z,
    "dateModified": 2020-05-18T16:38:34.980Z,
    "package": "9c0d66b95cdae13733bdeb986761ca47",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "9c0d66b95cdae13733bdeb986761ca47": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "9c0d66b95cdae13733bdeb986761ca47",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/tw0-levels-sub-arguments.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 67,
          "line": 28,
        },
        "start": Object {
          "column": 38,
          "line": 28,
        },
      },
      "name": "story-with-props",
      "source": "({ name, age }) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {({ name, age }) => <Button />}
</Story>
",
}
`;

exports[`mdx-stories two-arguments.mdx 1`] = `
Object {
  "components": Object {
    "fe664c2ffbbcacffdac896ace94db697": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "imports": undefined,
      "loc": undefined,
      "name": "Button",
      "request": undefined,
      "source": undefined,
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "fe664c2ffbbcacffdac896ace94db697",
    },
    "date": 2020-03-07T05:23:10.931Z,
    "dateModified": 2020-05-18T16:38:39.081Z,
    "package": "82864065f08bddd8e5586424d90a51f0",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "82864065f08bddd8e5586424d90a51f0": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "82864065f08bddd8e5586424d90a51f0",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/two-arguments.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 68,
          "line": 28,
        },
        "start": Object {
          "column": 38,
          "line": 28,
        },
      },
      "name": "story-with-props",
      "source": "(props, context) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {(props, context) => <Button />}
</Story>
",
}
`;

exports[`mdx-stories two-levels-alias.mdx 1`] = `
Object {
  "components": Object {
    "0a73df5cffa26ca62ec534813a77384f": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "imports": undefined,
      "loc": undefined,
      "name": "Button",
      "request": undefined,
      "source": undefined,
    },
  },
  "doc": Object {
    "component": "Button",
    "components": Object {
      "Button": "0a73df5cffa26ca62ec534813a77384f",
    },
    "date": 2020-03-07T05:25:12.973Z,
    "dateModified": 2020-05-18T16:38:43.233Z,
    "package": "fea8eb808fd320237df6714339cbe69b",
    "parameters": Object {
      "component": "Button",
    },
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "fea8eb808fd320237df6714339cbe69b": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.3.0",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "fea8eb808fd320237df6714339cbe69b",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/two-levels-alias.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.3.0",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 29,
        },
        "start": Object {
          "column": 9,
          "line": 29,
        },
      },
      "name": "story-with-props",
      "source": "({ name: MyName, age }) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" parameters={{component: Button}} />

<Story name=\\"story-with-props\\">
  {({ name: MyName, age }) => <Button />}
</Story>
",
}
`;
